--- a/index.Rmd
+++ b/index.Rmd
@@ -14,3 +14,38 @@ favicon: assets/GDSCN_style/gdscn_favicon.ico
 
 This book is part of a series of books for the [The Genomic Data Science Community Network (GDSCN)](https://www.gdscn.org/home).  GDSCN is a group of educators gathered with the aim to bring genomic data science education to students at diverse institutions. 
 
+---
+title: "GDSCN: Course Name "
+date: "`r format(Sys.time(), '%B %d, %Y')`"
+site: bookdown::bookdown_site
+documentclass: book
+bibliography: book.bib
+biblio-style: apalike
+link-citations: yes
+description: "Description about Course/Book."
+favicon: assets/GDSCN_style/gdscn_favicon.ico
+---
+
+# About this Course {-}
+
+This course is part of a series of courses for the [The Genomic Data Science Community Network (GDSCN)](https://www.gdscn.org/home) is a group of educators gathered with the aim to bring genomic data science education to students at diverse institutions. 
+
+## Skills Level {-} 
+
+::: {.notice}
+_Genetics_
+**Novice**: no genetics knowledge needed
+
+_Programming skills_
+**Novice**: no programming experience needed
+:::
+
+## Learning Objectives {-}
+
+<!-- Learning objectives for this activity come from the [Genetics Core Competencies](https://genetics-gsa.org/education/genetics-learning-framework/): -->
+
+<!-- - Objective 1 -->
+<!-- - Objective 2 -->
+<!-- - Objective 3 -->
+
+<!-- Please also see the Bioinformatics core competencies for undergraduate life sciences education from NIBLSE: https://journals.plos.org/plosone/article/figure?id=10.1371/journal.pone.0196878.t002 -->
