--- a/02-student_instructions.Rmd
+++ b/02-student_instructions.Rmd
@@ -37,4 +37,16 @@ ottrpal::set_knitr_image_path()
 
 ## Complete additional `swirl` lessons
 
+*Estimated time: 80 min*
+
+1. Complete additional Swirl lessons. 
+    a. Select “**R Programming**”
+    a. Select one of the courses listed below:
+        - **4: Vectors**
+        - **5: Missing_Values**
+        - **6: Subsetting_Vectors**
+        - **12: Looking_at_Data**
+1. Once you have completed all the courses listed above, exit swirl.
+    a. To exit swirl, type “bye()” in the console, press “ESC”, or enter “0” in response to the Swirl course menu prompt.
+
 ## Explore the ??? dataframe
