--- a/02-student_instructions.Rmd
+++ b/02-student_instructions.Rmd
@@ -7,21 +7,21 @@ ottrpal::set_knitr_image_path()
 
 # Set Up
 
-## Set Up Your Computer
-
 In order to run your analyses, you will use the [AnVIL cloud computing platform](https://anvilproject.org/), so that you do not need to install everything on your own computer.
 
 AnVIL (Analysis Visualization and Informatics Lab-space) is a cloud computing platform specially designed for analyzing biological data, and is used by scientists doing all sorts of biological research.
 
-**Step 1: Create Google Account**
+## Create Google Account
 
 Behind the scenes, AnVIL relies on Google Cloud Platform to provide computing infrastructure, so the first thing you will need to do is set up (free) a Google account.
 
 If you do not already have a Google account that you would like to use for accessing AnVIL, [create one now](https://accounts.google.com/SignUp).
 
-**Step 2: Log In to Terra**
+Alternatively, if you would like to create a Google account that is associated an existing non-Gmail email address, you can follow [these instructions](https://support.terra.bio/hc/en-us/articles/360029186611) (the instructions discuss "institutional email" accounts, but should work for any email).
 
-AnVIL uses [Terra](https://anvil.terra.bio/) to run analyses.  Terra provides many computational tools useful for biological data analysis, such as [RStudio](), [Galaxy](), and [Jupyter Notebooks]().  Terra takes care of installing these tools on Google's computers, so that you can just start using them.
+## Step 2: Log In to Terra
+
+AnVIL uses [Terra](https://anvil.terra.bio/) to run analyses.  Terra provides many computational tools useful for biological data analysis, such as [RStudio](https://www.rstudio.com/products/rstudio/), [Galaxy](https://usegalaxy.org/), and [Jupyter Notebooks](https://jupyter.org/).  Terra takes care of installing these tools on Google's computers, so that you can just start using them.
 
 Make sure you can log in to Terra - you will need to use Terra to perform computations on AnVIL. 
 
@@ -31,11 +31,11 @@ You can access Terra by going to [`anvil.terra.bio`](https://anvil.terra.bio/), 
 ottrpal::include_slide("https://docs.google.com/presentation/d/1tyt8ifxD3y7QW3nN27jh02aPrBvNEo1GN_u2Ne_UngM/edit#slide=id.gde7783227e_0_31")
 ```
 
-Open Terra ([`anvil.terra.bio`](https://anvil.terra.bio/)), and you should be prompted to sign in with your Google account.
+Open Terra, and you should be prompted to sign in with your Google account.
 
-**Step 3: Share username**
+## Step 3: Share username
 
-Finally, make sure your instructor has your Google account username (e.g. `myname@gmail.com`), so they give you access to everything you need.
+Finally, make sure your instructor has your Google account username (e.g. `myname@gmail.com`), so they can give you access to everything you need.
 
 - Make sure there are no typos!
 - If you have multiple Google accounts, make sure you give them the username that you will be using to access AnVIL
