drop headings from student setup

--- a/02-student_instructions.Rmd
+++ b/02-student_instructions.Rmd
@@ -20,17 +20,17 @@ AnVIL (Analysis Visualization and Informatics Lab-space) is a cloud computing pl
 - AnVIL uses [Terra](https://anvil.terra.bio/) to provides many computational tools useful for biological data analysis, such as [RStudio](https://www.rstudio.com/products/rstudio/), [Galaxy](https://usegalaxy.org/), and [Jupyter Notebooks](https://jupyter.org/).  Terra takes care of installing these tools on Google's computers, so that you can just start using them.
 :::
 
-## Create Google Account
+**Step 1: Create Google Account**
 
-The first thing you will need to do is set up (free) a Google account.
+First, you will need to set up a (free) Google account.
 
 If you do not already have a Google account that you would like to use for accessing AnVIL, [create one now](https://accounts.google.com/SignUp).
 
 - Alternatively, if you would like to create a Google account that is associated an existing non-Gmail email address, you can follow [these instructions](https://support.terra.bio/hc/en-us/articles/360029186611).
 
-## Step 2: Log In to Terra
+**Step 2: Log In to Terra**
 
-Next, make sure you can log in to Terra - you will need to use Terra to perform computations on AnVIL. 
+Next, make sure you can log in to Terra - you will use Terra to perform computations on AnVIL. 
 
 You can access Terra by going to [`anvil.terra.bio`](https://anvil.terra.bio/), or by clicking the link on the AnVIL home page.
 
@@ -40,7 +40,7 @@ ottrpal::include_slide("https://docs.google.com/presentation/d/1tyt8ifxD3y7QW3nN
 
 Open Terra, and you should be prompted to sign in with your Google account.
 
-## Step 3: Share username
+**Step 3: Share username**
 
 Finally, make sure your instructor has your Google account username (e.g. `myname@gmail.com`), so they can give you access to everything you need.
 
