--- a/02-student_instructions.Rmd
+++ b/02-student_instructions.Rmd
@@ -9,7 +9,7 @@ ottrpal::set_knitr_image_path()
 
 ## Set Up Your Computer
 
-In order to run your analyses, you will use the [AnVIL cloud computing platform](https://anvilproject.org/), so that you do not need to install everything on your own computer.  AnVIL (Analysis Visualization and Informatics Lab-space) is a cloud computing platform specially designed for analyzing biological data, and is used by scientists doing all sorts of biological research.
+In order to run your analyses, you will use the [AnVIL cloud computing platform](https://anvilproject.org/), so that you do not need to install everything on your own computer.  The AnVIL (Analysis Visualization and Informatics Lab-space) platform is specially designed for analyzing biological data, and is used by scientists doing all sorts of biological research.
 
 :::{.notice}
 **AnVIL in a nutshell**
