--- a/02-student_instructions.Rmd
+++ b/02-student_instructions.Rmd
@@ -56,6 +56,15 @@ It is *very important* that you share the Google account you will be using to ac
 
 Next you will need to access the materials on AnVIL.
 
+```{r, echo = FALSE, results='asis'}
+workspace_name <- "testy test"
+
+cow::borrow_chapter(
+  doc_path = "test_cow.Rmd",
+  #repo_name = "jhudsl/AnVIL_Template"
+  branch = "student-setup"
+)
+```
 
 # Introduction
 
